@@ -2,3 +2,4 @@
 * added advancements for first and max hp levels
 * changed `/leveluphp set*` commands to not implicitly target self
 * changed `/leveluphp config` command to not take a player argument
+* added failsafe to force a crash in case data loading silently fails
